# game-of-life

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: Utils.cmake  Warnings.cmake
game/includes/: FileReader.h
game/src/: CMakeLists.txt  FileReader.cpp  main.cpp
life_files/: stary_glider.lif  test02.lif  test03.lif
renderer/includes/: ComputeShader.h  GameFrameBuffer.h  Quad.h  Renderer.h  Shader.h  Texture.h
renderer/includes/glad/: gl.h
renderer/shaders/: generate_life_texture.comp  quad.frag
renderer/src/: CMakeLists.txt  ComputeShader.cpp  GameFrameBuffer.cpp  Quad.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
shared/: GameFrame.h
shared/includes/: Cell.h  GameFrame.h
shared/src/: CMakeLists.txt  GameFrame.cpp
simulation/includes/: Simulation.h
simulation/src/: CMakeLists.txt  Simulation.cpp
tests/: CMakeLists.txt  FileReaderTests.cpp  GameFrameTests.cpp  SimulationTests.cpp  TestUtils.h  test.cpp
